--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -29,7 +29,7 @@
       </div>
     </nav>
     <!-- CONTENT -->
-    <div id="site-content">
+    <div class="container" id="main-content">
       {% block content %}
       {% endblock %}
     </div>
@@ -43,14 +43,17 @@
     </div>
     <!--FOOTER-->
     <footer class="footer">
-      <div class="container-fluid footer" id="footer">
-        <div class="row texture">
-          <div class="col">
+      <div class="container-fluid">
+        <div class="row" id="footer">
+          <div class="col texture">
             dopepod 2017 stupid fresh
           </div>
         </div>
       </div>
     </footer>
+    <!-- PLAYER -->
+    <div class="container-fluid" id="player">
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
