--- a/index/templates/index/search_base.html
+++ b/index/templates/index/search_base.html
@@ -6,8 +6,8 @@ search
 
 {% block content %}
 <!-- MULTI BAR -->
-<div class="container" id="multi-bar">
-  <form id="search-form" method="GET" action="{% url 'search' %}">
+<form class="row" id="search-form" method="GET" action="{% url 'search' %}">
+  <div class="col">
     <!-- SEARCH BAR -->
     <div class="row" id="search-bar">
       <div class="col-auto texture">
@@ -32,150 +32,153 @@ search
       </div>
       <div class="col texture">
       </div>
+      <div class="col-auto texture">
+        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+          Options
+        </button>
+      </div>
     </div>
     <!-- OPTIONS -->
     <div class="row" id="options-bar">
       <div class="col texture">
-
       </div>
-      <div class="col-auto texture" id="options">
-        <!-- GENRES -->
-        <ul id="options-list">
-          <li>
-            <div class="btn-group">
-              <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Genre
-              </button>
-              <div class="dropdown-menu">
-                <div class="btn-group-vertical btn-group-sm filter-buttons" id="search-genre-buttons" data-toggle="buttons">
-                  {% if selected_genre == 'All' or selected_genre == None %}
-                  <label class="btn btn-outline-primary filter-button active">
-                    <input type="radio" name="search-genre" id="All" value="All" checked>
-                    All
-                  </label>
-                  {% else %}
-                  <label class="btn btn-outline-primary filter-button">
-                    <input type="radio" name="search-genre" id="All" value="All">
-                    All
-                  </label>
-                  {% endif %}
-                  {% for genre in genres %}
-                  {% if genre.name == selected_genre %}
-                  <label class="btn btn-outline-primary filter-button active">
-                    <input type="radio" name="search-genre" id="{{ genre.name }}" value="{{ genre.name }}" checked>
-                    {{ genre.name }}
-                  </label>
-                  {% else %}
-                  <label class="btn btn-outline-primary filter-button">
-                    <input type="radio" name="search-genre" id="{{ genre.name }}" value="{{ genre.name }}">
-                    {{ genre.name }}
-                  </label>
-                  {% endif %}
-                  {% endfor %}
+      <div class="collapse" id="collapseExample">
+        <div class="col-auto texture" id="options">
+          <ul id="options-list">
+            <!-- GENRES -->
+            <li>
+              <div class="btn-group">
+                <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Genre
+                </button>
+                <div class="dropdown-menu">
+                  <div class="btn-group-vertical btn-group-sm filter-buttons" id="search-genre-buttons" data-toggle="buttons">
+                    {% if selected_genre == 'All' or selected_genre == None %}
+                    <label class="btn btn-outline-primary filter-button active">
+                      <input type="radio" name="search-genre" id="All" value="All" checked>
+                      All
+                    </label>
+                    {% else %}
+                    <label class="btn btn-outline-primary filter-button">
+                      <input type="radio" name="search-genre" id="All" value="All">
+                      All
+                    </label>
+                    {% endif %}
+                    {% for genre in genres %}
+                    {% if genre.name == selected_genre %}
+                    <label class="btn btn-outline-primary filter-button active">
+                      <input type="radio" name="search-genre" id="{{ genre.name }}" value="{{ genre.name }}" checked>
+                      {{ genre.name }}
+                    </label>
+                    {% else %}
+                    <label class="btn btn-outline-primary filter-button">
+                      <input type="radio" name="search-genre" id="{{ genre.name }}" value="{{ genre.name }}">
+                      {{ genre.name }}
+                    </label>
+                    {% endif %}
+                    {% endfor %}
+                  </div>
                 </div>
               </div>
-            </div>
-          </li>
-          <!-- LANGUAGES -->
-          <li>
-            <div class="btn-group">
-          <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Language
-          </button>
-          <div class="dropdown-menu">
-            <div class="btn-group-vertical btn-group filter-buttons" id="search-language-buttons" data-toggle="buttons">
-              {% if selected_language == 'All' or selected_language == None %}
-                <label class="btn btn-outline-primary filter-button active">
-                  <input type="radio" name="search-language" id="All" value="All" checked>
-                  All
-                </label>
-              {% else %}
-                <label class="btn btn-outline-primary filter-button">
-                  <input type="radio" name="search-language" id="All" value="All">
-                  All
-                </label>
-              {% endif %}
-              {% for language in languages %}
-                {% if language.name == selected_language %}
-                  <label class="btn btn-outline-primary filter-button active">
-                    <input type="radio" name="search-language" id="{{ language.name }}"
-                    value="{{ language.name }}" checked>
-                    {{ language.name }}
-                  </label>
-                {% else %}
+            </li>
+            <!-- LANGUAGES -->
+            <li>
+              <div class="btn-group">
+                <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Language
+                </button>
+                <div class="dropdown-menu">
+                  <div class="btn-group-vertical btn-group filter-buttons" id="search-language-buttons" data-toggle="buttons">
+                    {% if selected_language == 'All' or selected_language == None %}
+                      <label class="btn btn-outline-primary filter-button active">
+                        <input type="radio" name="search-language" id="All" value="All" checked>
+                        All
+                      </label>
+                    {% else %}
+                      <label class="btn btn-outline-primary filter-button">
+                        <input type="radio" name="search-language" id="All" value="All">
+                        All
+                      </label>
+                    {% endif %}
+                    {% for language in languages %}
+                      {% if language.name == selected_language %}
+                        <label class="btn btn-outline-primary filter-button active">
+                          <input type="radio" name="search-language" id="{{ language.name }}"
+                          value="{{ language.name }}" checked>
+                          {{ language.name }}
+                        </label>
+                      {% else %}
+                        <label class="btn btn-outline-primary filter-button">
+                          <input type="radio" name="search-language" id="{{ language.name }}"
+                          value="{{ language.name }}">
+                          {{ language.name }}
+                        </label>
+                      {% endif %}
+                    {% endfor %}
+                  </div>
+                </div>
+              </div>
+            </li>
+            <!-- SHOW -->
+            <li>
+              <div class="btn-group">
+                <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  25
+                </button>
+                <div class="dropdown-menu">
+                  <div class="btn-group-vertical" id="search-show-buttons" data-toggle="buttons">
+                    {% for num in show %}
+                      {% if selected_show == num %}
+                        <label class="btn btn-outline-primary show-button active">
+                          <input type="radio" name="search-show" id="{{ num }}"
+                          value="{{ num }}" checked>
+                          {{ num }}
+                        </label>
+                      {% else %}
+                        <label class="btn btn-outline-primary show-button">
+                          <input type="radio" name="search-show" id="{{ num }}"
+                          value="{{ num }}">
+                          {{ num }}
+                        </label>
+                      {% endif %}
+                    {% endfor %}
+                  </div>
+                </div>
+              </div>
+            </li>
+            <!-- EXPLICIT -->
+            <li>
+              <div class="btn-group" id="search-explicit-buttons" data-toggle="buttons">
+                {% if selected_explicit == True or selected_explicit == None %}
                   <label class="btn btn-outline-primary filter-button">
-                    <input type="radio" name="search-language" id="{{ language.name }}"
-                    value="{{ language.name }}">
-                    {{ language.name }}
+                    <input type="checkbox" name="search-explicit" value="false">
+                    Hide Explicit
+                  </label>
+                  {% else %}
+                  <label class="btn btn-outline-primary filter-button active">
+                    <input type="checkbox" name="search-explicit" value="false" checked>
+                    Hide Explicit
                   </label>
                 {% endif %}
-              {% endfor %}
-            </div>
-          </div>
+              </div>
+            </li>
+          </ul>
         </div>
-          </li>
-          <!-- SHOW -->
-          <li>
-            <div class="btn-group">
-          <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            25
-          </button>
-          <div class="dropdown-menu">
-            <div class="btn-group-vertical" id="search-show-buttons" data-toggle="buttons">
-              {% for num in show %}
-                {% if selected_show == num %}
-                  <label class="btn btn-outline-primary show-button active">
-                    <input type="radio" name="search-show" id="{{ num }}"
-                    value="{{ num }}" checked>
-                    {{ num }}
-                  </label>
-                {% else %}
-                  <label class="btn btn-outline-primary show-button">
-                    <input type="radio" name="search-show" id="{{ num }}"
-                    value="{{ num }}">
-                    {{ num }}
-                  </label>
-                {% endif %}
-              {% endfor %}
-            </div>
-          </div>
-        </div>
-          </li>
-          <!-- EXPLICIT -->
-          <li>
-            <div class="btn-group" id="search-explicit-buttons" data-toggle="buttons">
-          {% if selected_explicit == True or selected_explicit == None %}
-            <label class="btn btn-outline-primary filter-button">
-              <input type="checkbox" name="search-explicit" value="false">
-              Hide Explicit
-            </label>
-            {% else %}
-            <label class="btn btn-outline-primary filter-button active">
-              <input type="checkbox" name="search-explicit" value="false" checked>
-              Hide Explicit
-            </label>
-          {% endif %}
-        </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </form>
-</div>
-
-<div class="container">
-  <div class="row" id="main">
-    <!-- MAIN -->
-    <div class="col">
-      <!-- RESULTS -->
-      <div class="row" id="results">
-        {% block results %}
-        {% endblock %}
-      </div>
-      <!-- RECOMMENDATIONS -->
-      <div class="row" id="recommendations">
       </div>
     </div>
   </div>
+</form>
+<!-- MAIN -->
+<div class="row" id="main">
+  <div class="col">
+    <!-- RESULTS -->
+    <div class="row" id="results">
+      {% block results %}
+      {% endblock %}
+    </div>
+  </div>
+</div>
+<!-- RECOMMENDATIONS -->
+<div class="row" id="recommendations">
 </div>
 {% endblock %}
