--- a/index/templates/index/subscriptions_base.html
+++ b/index/templates/index/subscriptions_base.html
@@ -7,7 +7,7 @@ subscriptions
 {% block content %}
   <!-- MULTI BAR -->
 <div class="container" id="multi-bar">
-  <div class="row" id="podinfo">
+  <div class="row">
     <div class="col texture">
     </div>
   </div>
