--- a/index/templates/index/search_results.html
+++ b/index/templates/index/search_results.html
@@ -5,38 +5,42 @@
 {% endblock %}
 
 {% block results %}
-{% if podcasts %}
-  {% for podcast in podcasts %}
-    <a class="col-lg-2 col-md-3 col-sm-4 col-6 result-wrapper show-podinfo" id="{{ podcast.itunesid }}" href=
-     "{% url 'podinfo' itunesid=podcast.itunesid %}">
-     <div class="result-box">
-       <div class="row">
-         <div class="col result-image">
-           <img src="{{ podcast.artworkUrl }}180x180bb.jpg" />
+<div class="col">
+  <div class="row" id="results-row">
+  {% if podcasts %}
+    {% for podcast in podcasts %}
+      <a class="col-lg-2 col-md-3 col-sm-4 col-6 result-wrapper show-podinfo" id="{{ podcast.itunesid }}" href=
+       "{% url 'podinfo' itunesid=podcast.itunesid %}">
+       <div class="result-box">
+         <div class="row result-image">
+           <div class="col">
+             <img src="{{ podcast.artworkUrl }}180x180bb.jpg" />
+           </div>
          </div>
-       </div>
-       <div class="row">
-         <div class="col result-title">
-           <h6>{{ podcast.title }}</h6>
+         <div class="row">
+           <div class="col result-title">
+             <h6>{{ podcast.title }}</h6>
+           </div>
          </div>
-       </div>
-       <div class="row">
-         <div class="col result-genre">
-           <p>
-             {% if podcast.genre.supa %}
-             {{ podcast.genre.supa }} -
-             {% endif %}
-             {{ podcast.genre }}
-           </p>
+         <div class="row">
+           <div class="col result-genre">
+             <p>
+               {% if podcast.genre.supa %}
+               {{ podcast.genre.supa }} -
+               {% endif %}
+               {{ podcast.genre }}
+             </p>
+           </div>
          </div>
-       </div>
 
-     </div>
-    </a>
-  {% endfor %}
-{% else %}
-  <p>
-    No results :p
-  </p>
-{% endif %}
+       </div>
+      </a>
+    {% endfor %}
+  {% else %}
+    <p>
+      No results :p
+    </p>
+  {% endif %}
+  </div>
+</div>
 {% endblock %}
