--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,10 +1,16 @@
-<div class="row texture">
-  <div class="col">
+<div class="row" id="player-bar">
+  <div class="col-auto texture">
+    <img src="{{ track.artwork }}100x100bb.jpg" />
+  </div>
+  <div class="col texture">
     <div class="row">
       <div class="col">
         <h6>
-          {{ track.title }}
+          {{ track.podcast }}
         </h6>
+        <p>
+          {{ track.title }}
+        </p>
       </div>
     </div>
     <div class="row">
