--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -6,60 +6,56 @@
 
 {% block content %}
 <!-- PODINFO BAR -->
-<div class="container" id="podinfo-bar">
-  <div class="row" id="podinfo">
+<div class="container" id="podinfo">
+  <div class="row" id="podinfo-bar">
+    <div class="col-auto texture">
+      <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
+    </div>
     <div class="col texture">
-      <div class="row">
-        <div class="col-sm-3">
-          <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
-        </div>
-        <div class="col-sm-6">
-          <h3>
-            {{ podcast.title }}
-          </h3>
-          <p>
-            {{ podcast.description }}<
-            /p>
-        </div>
-        <div class="col-sm-3">
-          {% if podcast.subscribed %}
-            <form class="sub-form" action="{% url 'subscribe' %}"
-            id="{{ podcast.itunesid }}" method="POST">
-              {% csrf_token %}
-              <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-              <input type="submit" class="btn btn-dark" id="sub-button"
-              value="Unsubscribe">
-            </form>
-          {% else %}
-            <form class="sub-form" action="{% url 'subscribe' %}"
-            id="{{ podcast.itunesid }}" method="POST">
-              {% csrf_token %}
-              <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-              <input type="submit" class="btn btn-dark" id="sub-button"
-              value="Subscribe">
-            </form>
-          {% endif %}
-          <p>
-            {% if podcast.genre.supa %}
-              {{ podcast.genre.supa }} -
-            {% endif %}
-            {{ podcast.genre }}
-          </p>
-          <p>
-            {{ podcast.language }}
-          </p>
-          {% if podcast.explicit %}
-            <p>
-              Explicit
-            </p>
-          {% endif %}
-          <p>
-            <em>
-              {{ podcast.copyrighttext }}
-            </em>
-          </p>
-        </div>
-      </div>
+      <h3>
+        {{ podcast.title }}
+      </h3>
+      <p>
+        {{ podcast.description }}<
+        /p>
+    </div>
+    <div class="col-auto texture">
+      {% if podcast.subscribed %}
+        <form class="sub-form" action="{% url 'subscribe' %}"
+        id="{{ podcast.itunesid }}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+          <input type="submit" class="btn btn-outline-primary" id="sub-button"
+          value="Unsubscribe">
+        </form>
+      {% else %}
+        <form class="sub-form" action="{% url 'subscribe' %}"
+        id="{{ podcast.itunesid }}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+          <input type="submit" class="btn btn-outline-primary" id="sub-button"
+          value="Subscribe">
+        </form>
+      {% endif %}
+      <p>
+        {% if podcast.genre.supa %}
+          {{ podcast.genre.supa }} -
+        {% endif %}
+        {{ podcast.genre }}
+      </p>
+      <p>
+        {{ podcast.language }}
+      </p>
+      {% if podcast.explicit %}
+        <p>
+          Explicit
+        </p>
+      {% endif %}
+      <p>
+        <em>
+          {{ podcast.copyrighttext }}
+        </em>
+      </p>
     </div>
   </div>
 </div>
@@ -89,10 +85,8 @@ $(window).ready(function() {
       console.log(thrownError);
     })
     .done(function(response) {
-      $("#tracks").hide();
-      $("#tracks").html(response);
-      $('#overlay').addClass('hide');
-      $("#tracks").fadeIn();
+      // $("#tracks").html(response);
+      // $('#overlay').hide();
     });
 });
 </script>
