--- a/podcasts/templates/tracks.html
+++ b/podcasts/templates/tracks.html
@@ -1,5 +1,5 @@
-<div class="col">
-  {% if tracks %}
+{% if tracks %}
+  <div class="col">
     <table class="table table-bordered table-hover">
       <thead>
         <tr>
@@ -30,17 +30,21 @@
             {{ track.length }}
           </td> -->
           <td>
-            <a class="btn btn-primary play" id="{{ track.url }}"
-            name="{{ track.type }}" href="{% url 'play' url=track.url %}"
-            target="_blank">
-              Play
+            <form class="play" action="{% url 'play' %}" method="POST" target="_blank">
               <!-- ADDTL TRACK INFO HERE -->
-              <span class="hidden" id="{{ track.title }}" name="{{ podcast.title }}">
-              </span>
-            </a>
+              {% csrf_token %}
+              <input type="hidden" name="artwork" value="{{ podcast.artworkUrl }}">
+              <input type="hidden" name="url" value="{{ track.url }}">
+              <input type="hidden" name="type" value="{{ track.type }}">
+              <input type="hidden" name="title" value="{{ track.title }}">
+              <input type="hidden" name="podcast" value="{{ podcast.title }}">
+              <button class="btn btn-outline-primary" type="submit">
+                Play
+              </button>
+            </form>
           </td>
           <td>
-            <a class="btn btn-primary" href="{{ track.url }}">
+            <a class="btn btn-outline-primary" href="{{ track.url }}">
               Download
             </a>
           </td>
@@ -48,8 +52,8 @@
       {% endfor %}
       </tbody>
     </table>
-  {% else %}
-    <div class="row" id="overlay">
-    </div>
-  {% endif %}
-</div>
+  </div>
+{% else %}
+  <div class="col" id="overlay">
+  </div>
+{% endif %}
