--- a/index/static/style.css
+++ b/index/static/style.css
@@ -1,23 +1,51 @@
 body {
   /*background: url("space.jpg");*/
   background: rgba(255, 255, 255, 1);
-  /*background: hsla(0, 0%, 100%, 1);*/
 }
 
 .texture {
   background: url("grid.png");
 }
 
+
+.btn-outline-primary {
+  color: #000;
+  background-color: #fff;
+  border-color: rgba(76,222,181,1);
+}
+
+.btn-outline-primary.active, .btn-outline-primary:hover, .btn-outline-primary:focus {
+    color: #fff;
+    background-color: rgba(76,222,181,1);
+    border-color: rgba(76,222,181,1);
+    box-shadow: 0 0 0 3px rgba(76,222,181,.5);
+}
+
+/*$brand-primary: ;*/
+
+.color {
+  background: rgba(76,222,181,1);
+  background: -moz-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(76,222,181,1)), color-stop(100%, rgba(145,194,186,1)));
+  background: -webkit-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
+  background: -o-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
+  background: -ms-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
+  background: linear-gradient(to right, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4cdeb5', endColorstr='#91c2ba', GradientType=1 );
+}
+
 #nav-bar {
   background: rgba(255, 255, 255, 1);
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
+  -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
   z-index: 99;
   /*height: 80px;*/
 }
 
-/*#main {
-  min-height: 100vh;
-}*/
+#main {
+
+}
 #tracks {
   min-height: 100%;
   margin-top: 15px;
@@ -26,23 +54,28 @@ body {
   border: 1px solid black;
 }
 #subscriptions {
-  min-height: 100vh;
-  margin-top: 200px;
+
 }
 
 #main-content {
+  background-color: #fff;
   min-height: 100vh;
+  /*border-left: 1px solid black;
+  border-right: 1px solid black;*/
 }
 
 /* MULTI BAR */
 #multi-bar {
-  padding-top: 80px;
+  border-radius: 8px;
+  -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
 }
 #options {
   padding-right: 0;
 }
 #options-bar {
-  background: #3b6d83;
+
 }
 #options-list {
   display: flex;
@@ -51,74 +84,66 @@ body {
   list-style: none;
 }
 #search-bar {
-  background: #3b6d83;
+  padding: 20px;
 }
 #browse-bar {
-  background: #3b6d83;
-}
-#search-form {
-  padding-top: 80px;
-}
-#search-field {
- padding: 20px;
-}
-#q {
 
 }
-.filter-buttons {
-  width: 100%;
+#search-form {
+  margin-top: 80px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
-.show-button {
-  width: 100%;
-  margin: 0;
-  border-radius: 0;
+#search-field {
+  width: 300px;
 }
-#search-show-buttons {
-  min-width: 0;
-  z-index: 97;
+#search-button {
+  position: absolute;
+  left: 254px;
+  top: 4px;
+  z-index: 50;
+  border-radius: 20px;
+  height: 38px;
+  width: 38px;
 }
-.btn.filter-button {
-  text-align: left;
-  /*white-space: normal;*/
+#q {
+ border-radius: 22px;
+ padding: .75rem 1rem;
+ -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+ -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+ box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
 }
+
+#alphabet {
+  background: #3b6d83;
+}
+#alphabet-buttons {
+ padding: .75rem 1rem;
+}
+.alphabet-button {
+ padding: .5rem .7rem;
+}
+
 .dropdown-menu {
   min-width: 0;
 }
 
 /* PODINFO BAR */
 #podinfo-bar {
-  background: #3b6d83;
   margin-top: 80px;
+  border-radius: 8px;
+}
+#podinfo {
   padding-top: 15px;
   padding-bottom: 15px;
 }
-#podinfo {
-  min-height: 100vh;
+
+#podinfo-image {
+
 }
 
 #browse {
   border: 1px solid black;
-}
-
-#alphabet {
-  background: #3b6d83;
-}
-
-.alphabet-buttons {
-  padding: 15px 0px;
-}
-
-.btn-outline-primary {
-  color: #000;
-  background-color: #fff;
-  background-image: none;
-  border-color: #007bff;
-}
-
-.btn-outline-primary.active {
-    color: #fff;
-    background-color: #cccccc;
-    border-color: #007bff;
 }
 
 .breadcrumb-item+.breadcrumb-item::before {
@@ -148,17 +173,15 @@ body {
   padding-top: 0px;
 }
 .result-box {
-/*
-  box-shadow: 4px 4px 4px rgba(20, 30, 40, 0.2);
-*/
+  /*-webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);*/
   border: 1px solid black;
-  border-radius: .25rem;
   text-align: left;
-  margin: 5px;
+  margin: 4px;
 }
 .result-image {
-  min-width: 100%;
-  min-height: 100%;
+height: 180px;
 }
 .result-image img {
   margin: auto;
@@ -168,20 +191,23 @@ body {
   max-height:100%;
 }
 .result-title {
-  padding-top: 5px;
-  height: 60px;
   overflow: hidden;
-  text-overflow: ellipsis;
+  padding-top: 0.5rem;
+  height: 3.8rem;
+  color: #000;
 }
-
-.result-genre {
+h6, p, a {
+  text-decoration: none;
+}
+.result-genre, .result-genre:hover {
+  color: #000;
+  overflow: hidden;
+  height: 3rem;
   text-decoration: none;
 }
 
 #recommendations{
   margin-top: 15px;
-  height: 400px;
-  border: 1px solid black;
 }
 
 .sub-box {
@@ -195,7 +221,6 @@ body {
   position: fixed;
   bottom: 0;
   z-index: 98;
-  padding-top: 4px;
 }
 
 #trackinfo-content {
@@ -204,7 +229,7 @@ body {
 }
 
 #player-bar {
-  background: #3b6d83;
+  padding-top: 3px;
 }
 
 #overlay {
@@ -225,6 +250,5 @@ body {
 
 }
 .footer {
-  background: #3b6d83;
   text-align: center;
 }
