--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -12,7 +12,7 @@
       {% endblock %}
     </title>
     <!--Font Awesome-->
-    <!--<script src="https://use.fontawesome.com/793ac32e1c.js"></script>-->
+    <script src="https://use.fontawesome.com/793ac32e1c.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
@@ -44,7 +44,7 @@
     <!--FOOTER-->
     <footer class="footer">
       <div class="container-fluid">
-        <div class="row" id="footer">
+        <div class="row color" id="footer">
           <div class="col texture">
             dopepod 2017 stupid fresh
           </div>
@@ -52,7 +52,7 @@
       </div>
     </footer>
     <!-- PLAYER -->
-    <div class="container-fluid" id="player">
+    <div class="container-fluid color" id="player">
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
