--- a/index/templates/index/subscriptions_results.html
+++ b/index/templates/index/subscriptions_results.html
@@ -2,7 +2,7 @@
   {% if subscriptions %}
     {% for subscription in subscriptions %}
       <div class="row">
-        <a class="col result-image show-podinfo sub-box"
+        <a class="col show-podinfo sub-box"
         id="{{ subscription.itunesid }}" href=
          "{% url 'podinfo' itunesid=subscription.itunesid %}">
           <h6>
