--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,16 +1,21 @@
-<div class="row" id="player-bar">
-  <div class="col-auto texture">
+<div class="row texture" id="player-bar">
+  <div class="col-auto">
     <img src="{{ track.artwork }}100x100bb.jpg" />
   </div>
-  <div class="col texture">
+  <div class="col">
     <div class="row">
       <div class="col">
         <h6>
           {{ track.podcast }}
         </h6>
         <p>
-          {{ track.title }}
+          {{ track.title }} | {{ track.date }}
         </p>
+      </div>
+      <div class="col-auto">
+        <button type="button" id="player-close" class="close" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
     </div>
     <div class="row">
