workin on ajax views

--- a/index/templates/index/browse_results.html
+++ b/index/templates/index/browse_results.html
@@ -1,7 +1,7 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/browse_base.html' %}
+{% extends request.is_ajax|yesno:'ajax.html,index/search_base.html' %}
 
 {% block title %}
-browse
+dopepod
 {% endblock %}
 
 {% block results %}
