--- a/index/templates/index/search_results.html
+++ b/index/templates/index/search_results.html
@@ -1,7 +1,7 @@
 {% extends request.is_ajax|yesno:'ajax.html,index/search_base.html' %}
 
 {% block title %}
-{{ podcasts.paginator.count }} results
+dopepod
 {% endblock %}
 
 {% block results %}
