--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -30,19 +30,19 @@
 <ul class="navbar-nav ml-auto">
   {% if user.is_authenticated %}
     <li>
-      <a class="btn btn-primary ajax-logout" href="{% url 'account_logout' %}">
+      <a class="btn btn-outline-primary ajax-logout" href="{% url 'account_logout' %}">
         Logout
       </a>
     </li>
   {% else %}
     <li>
-      <a class="btn btn-primary ajax-register" href="{% url 'account_signup' %}"
+      <a class="btn btn-outline-primary ajax-register" href="{% url 'account_signup' %}"
       data-toggle="modal" data-target="#modal">
         Register
       </a>
     </li>
     <li>
-      <a class="btn btn-primary ajax-login" href="{% url 'account_login' %}"
+      <a class="btn btn-outline-primary ajax-login" href="{% url 'account_login' %}"
       data-toggle="modal" data-target="#modal">
         Login
       </a>
