--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <!-- PODINFO BAR -->
-<form class="row" id="podinfo-form" method="GET" action="{% url 'subscribe' %}">
+<div class="row">
   <div class="col color" id="podinfo-bar">
     <div class="row texture" id="podinfo">
       <div class="col-auto" id="podinfo-image">
@@ -21,23 +21,21 @@
           /p>
       </div>
       <div class="col-auto">
-        {% if podcast.subscribed %}
-          <form class="sub-form" action="{% url 'subscribe' %}"
-          id="{{ podcast.itunesid }}" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-            <input type="submit" class="btn btn-outline-primary" id="sub-button"
-            value="Unsubscribe">
-          </form>
-        {% else %}
-          <form class="sub-form" action="{% url 'subscribe' %}"
-          id="{{ podcast.itunesid }}" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-            <input type="submit" class="btn btn-outline-primary" id="sub-button"
-            value="Subscribe">
-          </form>
-        {% endif %}
+        <form id="sub-form" action="{% url 'subscribe' %}"
+        id="{{ podcast.itunesid }}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+          {% if podcast.subscribed %}
+          <button type="submit" class="btn btn-outline-primary" id="sub-button"
+          value="Unsubscribe">
+            Unsubscribe
+          {% else %}
+          <button type="submit" class="btn btn-outline-primary" id="sub-button"
+          value="Subscribe">
+            Subscribe
+          {% endif %}
+          </button>
+        </form>
         <p>
           {% if podcast.genre.supa %}
             {{ podcast.genre.supa }} -
@@ -60,7 +58,7 @@
       </div>
     </div>
   </div>
-</form>
+</div>
 <!-- TRACKS -->
   <div class="row" id="tracks">
     {% include 'tracks.html' %}
